--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -198,10 +198,10 @@
 
 .know-more-btn {
   /* margin-top: 15px; */
-  /* padding: 10px 16px; */
+  padding: 10px 16px;
   background-color:transparent;
-  color:black;
-  border: none;
+  color:#6161c2;
+  border: 2px solid #6161c2;
   border-radius: 8px;
   font-size: 0.95rem;
   cursor: pointer;
@@ -230,10 +230,10 @@
   background: #fff;
   padding: 25px;
   border-radius:1px;
-  border-top: 20px solid #1d4ed8;
+  border-top: 25px solid #6161c2;
   width: 100%;
   margin-top: 50px;
-  max-width: 700px;
+  max-width: 800px;
   max-height: 80vh;
   overflow-y: auto;
   position: relative;
@@ -286,6 +286,7 @@
 .awards-list {
   margin-top: 10px;
   padding-left: 20px;
+  border-top: 2px solid #6161c2;
 }
 
 .awards-list li {
@@ -419,7 +420,7 @@
 
 @media screen and (max-width: 768px) {
   .content_wrapper {
-    flex-direction: column;
+    flex-direction: column-reverse;
     text-align: center;
   }
 
@@ -635,6 +636,9 @@
     flex-direction: column;
     gap: 2rem;
   }
+  .about-content{
+    flex-direction: column-reverse;
+  }
 
   .about-image {
     width: 100%;
@@ -654,7 +658,7 @@
 /* publication section */
 .publications-grid {
   width: 100%;
-  background-color: orange;
+  /* background-image: url('../Images/background.jpg'); */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -665,8 +669,8 @@
   padding: 5px;
   height: 500px;
   overflow-y: scroll;
-  border-top: 1px solid black;
-  border-left: 1px solid black;
+  border-top: 10px solid #6161c2;
+  /* border-left: 1px solid black; */
 }
 
 .publication-card {
@@ -818,6 +822,13 @@
     flex-direction: column;
     align-items: center;
   }
+  .research-container{
+    flex-direction: column-reverse;
+  }
+  .contact-card{
+    width: 100%;
+    margin: 5px;
+  }
 }
 
 
@@ -934,7 +945,12 @@
 /* research team */
 .research-page-container {
   min-height: 100vh;
-  background: linear-gradient(to bottom right, #efaf19, #ffffff);
+  background: #757F9A;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #D7DDE8, #757F9A);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #D7DDE8, #757F9A);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   padding: 2.5rem 1.25rem;
   border-top: 1px solid rgba(0, 0, 0, 0.646);
 }
@@ -982,16 +998,29 @@
   box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   background-color: whitesmoke;
+  border-radius: 12px;
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transition: transform 0.3s ease;
+}
+
+.team-card:hover {
+  transform: translateY(-5px);
 }
 
 .team-image {
   width: 100%;
-  height: 12rem;
-  object-fit: cover;
+  height: 250px;
+  object-fit: contain;
+  background-color: #f0f0f0; /* Optional: neutral background */
+  padding: 0.5rem;
 }
 
 .team-card-content {
   padding: 1rem;
+  text-align: center;
 }
 
 .team-name {
